--- a/guess.html
+++ b/guess.html
@@ -1,5 +1,5 @@
 <h1>Guessing Game</h1>
-In this game, the computer generates a random number between 1 and 100. You must guess this number. Each time you guess the computer will tell you if your guess was high, low, or correct. Good luck and don't have fun!
+Guess the number!
 <br>
 <br>
 <input type='number' id='guess'>
