--- a/guess.html
+++ b/guess.html
@@ -3,7 +3,7 @@
         <title>FANCY</title>
         <link href='https://fonts.googleapis.com/css?family=Kalam' rel='stylesheet' type='text/css'>
        <link href='https://fonts.googleapis.com/css?family=Kalam:700,400' rel='stylesheet' type='text/css'>
-        <Link rel='stylesheet' href='guessstyle.css'>
+        <Link rel='stylesheet' href='genericstyle.css'>
     </head>
     
     <body>
