--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <a href='schoolWebsite.html'>Home</a>     
          
          <a href='Python.html'>Python</a>  
-        <a href='Processing.html'>Processing</a>  
+        <a href=http://chelricerdae.github.io/Processing.html'>Processing</a>  
         
         </div>
          <h1><span>Rachel</span> Perry </h1>
