--- a/processing.html
+++ b/processing.html
@@ -170,6 +170,43 @@ point(140,280);<br>
  ------------------------------------------------<br>
 CHALLENGE - Dot Grid<input class="spoilerbutton2" type="button" value="o" onclick="this.value=this.value=='o'?'x':'o';">
 <div class="spoiler"><div id="spoilertext">
+    <img src="http://i.imgur.com/VjU9cUj.png"></img><br>
+    size(500,500);<br>
+stroke(0);<br>
+strokeWeight(50);<br>
+<br>
+//1<br>
+point(100,100);<br>
+//2<br>
+point(200,100);<br>
+//3<br>
+point(300,100);<br>
+//4<br>
+point(400,100);<br>
+//5<br>
+point(100,200);<br>
+//6<br>
+point(200,200);<br>
+//7<br>
+point(300,200);<br>
+//8<br>
+point(400,200);<br>
+//9<br>
+point(100,300);<br>
+//10<br>
+point(200,300);<br>
+//11<br>
+point(300,300);<br>
+//12<br>
+point(400,300);<br>
+//13<br>
+point(100,400);<br>
+//14<br>
+point(200,400);<br>
+//15<br>
+point(300,400);<br>
+//16<br>
+point(400,400);<br>
  </div></div>  
 <br>
  ------------------------------------------------<br>
