--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         
         </div>
          <h1><span>Rachel</span> Perry </h1>
-          <span>Hey!</span>
+          <span>Hey! To find specific programs use Ctrl + F and type the name of the program!</span>
           <img src = https://lh3.googleusercontent.com/-Urp_R_w7ZuA/V0OXISmjzxI/AAAAAAAAAUE/U6ZPXGRPdnsejCvPfycSCqnGG9Lm3u4HACKgB/w140-h140-p/ho%2Bgawdicon.png></img>
     </body>
             
