raerh therh aerhaq tae

--- a/processing.html
+++ b/processing.html
@@ -750,7 +750,7 @@ Out of Range correction<input class="spoilerbutton2" type="button" value="o" onc
  ------------------------------------------------<br>
 Moving objects in different directions<input class="spoilerbutton2" type="button" value="o" onclick="this.value=this.value=='o'?'x':'o';">
 <div class="spoiler"><div id="spoilertext">
-    <img src="blob:http://imgur.com/2c9436bc-58b8-42b9-8833-9c3a74682faf"></img>
+    <img src="http://i.imgur.com/mtaWEpW.gif"></img><br>
     int frame;<br>
 int x;<br>
 int y;<br>
