--- a/Python.html
+++ b/Python.html
@@ -31,7 +31,7 @@
         
         </div>
          <h1>Python </h1>
-          <span id='prolist'>Guess Who
+          <span id='proslist'>Guess Who
   <input class="spoilerbutton" type="button" value="o" onclick="this.value=this.value=='o'?'x':'o';">
 <div class="spoiler"><div id="spoilertext">
 print ("This is a yes or no game; Type it in")<br>
@@ -156,7 +156,37 @@ age = int(age)<br>
 print("you will be this age in 50 years")<br>
 print(age + 50)<br>
 </div></div>
+ASCII Frog
+<input class="spoilerbutton" type="button" value="o" onclick="this.value=this.value=='o'?'x':'o';">
+<div class="spoiler"><div id="spoilertext">  
+<img src="http://i.imgur.com/xOdSdTx.png"></img>                                                           
+print("R")
+print("  I")
+print("    B")
+print("      B")
+print("        I")
+print("          T")
+
+print(" *3       *3")
+print("   @..@")
+print("  (----)")
+print(" ( >__< )")
+print(" ^^ ~~ ^^")
+print("-----------")
+print("|          |")
+print("-----------")
+
+
+print("R")
+print("  I")
+print("    B")
+print("      B")
+print("        I")
+print("          T")
+
+</div></div>
 </span>
+
 
           <img src = https://lh3.googleusercontent.com/-Urp_R_w7ZuA/V0OXISmjzxI/AAAAAAAAAUE/U6ZPXGRPdnsejCvPfycSCqnGG9Lm3u4HACKgB/w140-h140-p/ho%2Bgawdicon.png></img>
     </body>
