--- a/Python.html
+++ b/Python.html
@@ -6,6 +6,7 @@
  -->
 <html> 
     <head> 
+        <link rel="icon" type="image/png" href="http://i.imgur.com/m4AxJ8V.png">
         <title>Python</title>
         <link href='https://fonts.googleapis.com/css?family=Kalam' rel='stylesheet' type='text/css'>
        <link href='https://fonts.googleapis.com/css?family=Kalam:700,400' rel='stylesheet' type='text/css'>
