--- a/processing.html
+++ b/processing.html
@@ -831,6 +831,27 @@ HSB Color<input class="spoilerbutton2" type="button" value="o" onclick="this.val
 <br>
 Fade out effects<input class="spoilerbutton2" type="button" value="o" onclick="this.value=this.value=='o'?'x':'o';">
 <div class="spoiler"><div id="spoilertext">
+    <img src="http://i.imgur.com/Sqo86Wk.gif"></img><br>
+  float x_value;<br>
+<br>
+void setup()<br>
+{<br>
+  size(400, 200);<br>
+  background(0);<br>
+  stroke(255);<br>
+  frameRate(10);<br>
+  //noFill();<br>
+}<br>
+<br>
+void draw()<br>
+{<br>
+  <br>
+  fill(0, 70);<br>
+  rect(0, 0, width, height); <br>
+  stroke(random(255),random(255),random(255));<br>
+ // x_value = (x_value+61) % 400;<br>
+  rect(mouseX, mouseY, 50, 50);<br>
+}<br>
  </div></div>  
 <br>
 <br>
@@ -841,6 +862,28 @@ User Inputs<input class="spoilerbutton2" type="button" value="o" onclick="this.v
 <br>
 Mouse inputs<input class="spoilerbutton2" type="button" value="o" onclick="this.value=this.value=='o'?'x':'o';">
 <div class="spoiler"><div id="spoilertext">
+  <img src="http://i.imgur.com/Sqo86Wk.gif"></img><br>
+  float x_value;<br>
+<br>
+void setup()<br>
+{<br>
+  size(400, 200);<br>
+  background(0);<br>
+  stroke(255);<br>
+  frameRate(10);<br>
+  //noFill();<br>
+}<br>
+<br>
+void draw()<br>
+{<br>
+  <br>
+  fill(0, 70);<br>
+  rect(0, 0, width, height); <br>
+  stroke(random(255),random(255),random(255));<br>
+ // x_value = (x_value+61) % 400;<br>
+  rect(mouseX, mouseY, 50, 50);<br>
+}<br>
+
  </div></div>  
 <br>
 <br>
