--- a/Python.html
+++ b/Python.html
@@ -189,7 +189,7 @@ print("          T")
 </span>
 
 
-          <img src = https://lh3.googleusercontent.com/-Urp_R_w7ZuA/V0OXISmjzxI/AAAAAAAAAUE/U6ZPXGRPdnsejCvPfycSCqnGG9Lm3u4HACKgB/w140-h140-p/ho%2Bgawdicon.png></img>
+          <img id="icon" src = "http://i.imgur.com/UspGjOP.png"></img>
     </body>
             
     
