--- a/processing.html
+++ b/processing.html
@@ -1035,7 +1035,7 @@ Drawing Textures<input class="spoilerbutton2" type="button" value="o" onclick="t
 <br>
 <br>
 </span>
-          <img src = https://lh3.googleusercontent.com/-Urp_R_w7ZuA/V0OXISmjzxI/AAAAAAAAAUE/U6ZPXGRPdnsejCvPfycSCqnGG9Lm3u4HACKgB/w140-h140-p/ho%2Bgawdicon.png></img>
+          <img id="icon" src = "http://i.imgur.com/UspGjOP.png"></img></img>
     </body>
             
     
