--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id='links'>
     <a href='http://chelricerdae.github.io/'>Home</a>     
          
-         <a href='Python.html'>Python</a>  
+         <a href= http://chelricerdae.github.io/python.html >Python</a>  
         <a href= http://chelricerdae.github.io/processing.html >Processing</a>   
         
         </div>
