--- a/python.html
+++ b/python.html
@@ -188,6 +188,15 @@ print("          T")
 </div></div>
 </span>
 
+Pythagorean Theorem
+  <input class="spoilerbutton" type="button" value="o" onclick="this.value=this.value=='o'?'x':'o';">
+<div class="spoiler"><div id="spoilertext">                                                             
+<img src="http://i.imgur.com/swFRZf7.png"></img>
+a = int(input("Please enter the length of side A"))
+b = int(input("Please enter the length of side B"))
+c=(a*a + b*b) ** 0.5
+print("The length of the hypotenuse is ", c)
+</div></div>
 
           <img id="icon" src = "http://i.imgur.com/UspGjOP.png"></img>
     </body>
