--- a/python.html
+++ b/python.html
@@ -20,6 +20,13 @@
 .spoiler > div {-webkit-transition: all 0.2s ease;-moz-transition: margin 0.2s ease;-o-transition: all 0.2s ease;transition: margin 0.2s ease;}
 .spoilerbutton[value="o"] + .spoiler > div {margin-top:-3000%;}
 .spoilerbutton[value="x"] + .spoiler {padding:1px;} 
+.spoilerbutton2 {background-repeat: no-repeat;}
+.spoilerbutton2[value="o"] {background-repeat: no-repeat;}
+.spoilerbutton2[value="x"] {background-repeat: no-repeat;}
+.spoilerbutton2 {background-position: center;}
+.spoilerbutton2[value="o"] {background-position: center;}
+.spoilerbutton2[value="x"] {background-position: center;}
+</style> 
 </style> 
     </head>
     
