--- a/processing.html
+++ b/processing.html
@@ -1050,7 +1050,7 @@ Creating functions()<input class="spoilerbutton2" type="button" value="o" onclic
 <br>
 Writing your own functions<input class="spoilerbutton2" type="button" value="o" onclick="this.value=this.value=='o'?'x':'o';">
 <div class="spoiler"><div id="spoilertext">
-  <img src=http://i.imgur.com/0tWtdsB.png></img>
+  <img src=http://i.imgur.com/0tWtdsB.png></img><br>
   void K(int x, int y)<br>
 {<br>
   fill(random(54), random(75), random(143));<br>
@@ -1086,7 +1086,7 @@ void setup() {<br>
   <br>
   }<br>
  <br>
-}<br>
+}
  </div></div>  
 <br>
 <br>
