--- a/processing.html
+++ b/processing.html
@@ -500,6 +500,19 @@ if  (x < 25)<br>
 <br>
 CHALLENGE - Bubbles<input class="spoilerbutton2" type="button" value="o" onclick="this.value=this.value=='o'?'x':'o';">
 <div class="spoiler"><div id="spoilertext">
+  <img src=http://i.imgur.com/v69yjXh.png ></img><br>
+  //Rachel Perry 2017<br>
+size(800, 800);<br>
+background(123, 68, 123);<br>
+strokeWeight(random(10));<br>
+for (int bub = 0; bub < 40; ) {<br>
+<br>
+  fill(random(255), random(255), random(255));<br>
+  stroke(random(255), random(255), random(255));<br>
+  ellipse(random(800), random(800), random(100), random(100));<br>
+  bub = bub + 1;<br>
+}<br>
+
  </div></div>  
 <br>
 <br>
@@ -1051,6 +1064,7 @@ Creating functions()<input class="spoilerbutton2" type="button" value="o" onclic
 Writing your own functions<input class="spoilerbutton2" type="button" value="o" onclick="this.value=this.value=='o'?'x':'o';">
 <div class="spoiler"><div id="spoilertext">
   <img src=http://i.imgur.com/0tWtdsB.png></img><br>
+//Rachel Perry 2017<br>
   void K(int x, int y)<br>
 {<br>
   fill(random(54), random(75), random(143));<br>
