--- a/python.html
+++ b/python.html
@@ -203,8 +203,6 @@ c=(a*a + b*b) ** 0.5<br>
 print("The length of the hypotenuse is ", c)<br>
 </div></div>
 
-</span>
-
 ASCII X-Wing
     <input class="spoilerbutton" type="button" value="o" onclick="this.value=this.value=='o'?'x':'o';">
 <div class="spoiler"><div id="spoilertext">                                                             
@@ -226,9 +224,12 @@ for row in range (8,-1,-1):<br>
         print(' ',end='')<br>
     for jack in range(row+1):<br>
         print('@',end='')<br>
-    print()<br>
+    print()
 
 </div></div>
+</span>
+
+
           <img id="icon" src = "http://i.imgur.com/UspGjOP.png"></img>
     </body>
             
